<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkableBehavior="all"
        android:enabled="true"
        android:menuCategory="container"
        >

        <item
            android:id="@+id/menu_se_representante"
            android:title="@string/string_menu_se_representante"
            app:actionLayout="@layout/widget_check"/>

        <item
            android:id="@+id/menu_se_datos_generales"
            android:title="@string/string_menu_se_datos_generales"
            app:actionLayout="@layout/widget_check"/>

        <item
            android:id="@+id/menu_se_estructura_familiar"
            android:title="@string/string_menu_se_estructura_familiar" app:actionLayout="@layout/widget_check"/>

        <item
            android:id="@+id/menu_se_seguridad_social_y_salud"
            android:title="@string/string_menu_se_seguridad_social_y_salud" app:actionLayout="@layout/widget_check"/>

        <item
            android:id="@+id/menu_se_servicios"
            android:title="@string/string_menu_se_servicios" app:actionLayout="@layout/widget_check"/>

        <item
            android:id="@+id/menu_se_infraestructura_de_vivienda"
            android:title="@string/string_menu_se_infraestructura_de_vivienda" app:actionLayout="@layout/widget_check" />

        <item
            android:id="@+id/menu_se_condiciones_econ_micas"
            android:title="@string/string_menu_se_condiciones_econ_micas" app:actionLayout="@layout/widget_check" />
    </group>

</menu>